--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="refresh" content="0; url=https://zhangzixuan0124.github.io/LenguajeDeMarcasFormulario/Form/WebContent/Home.html ">
+  <title>redireccion</title>
+  </head>
+<body>
+
+
+</body>
+</html>
+
